# LangExtract-Example

./: .gitignore  README.md  app.py  pyproject.toml
templates/: index.html
